--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,3 +1,4 @@
+ <!--
  <tr>
  	<td><%= task.content %></td>
  	<td><%= task.state %></td>
@@ -15,4 +16,24 @@
  <% end -%>
 
  </tr>
+-->
+<div class="panel panel-info">
+	<div class="panel-heading">created <%= time_ago_in_words(task.created_at) %> ago</div>
+	<div class="panel-body"><%= task.content %></div>
+	
+	<div class="panel-footer text-center">
+		<% if task.state == "doing" %>
 
+ 	 <%= link_to "<i class='fa fa-arrow-left'></i>".html_safe, change_task_path(task, state: "to_do"), method: :put %>
+ 	 <%= link_to "<i class='fa fa-arrow-right'></i>".html_safe, change_task_path(task, state: "done"), method: :put %>
+	 <% elsif task.state == "done" %>
+	 	 
+ 	 <%= link_to "<i class='fa fa-arrow-left'></i>".html_safe, change_task_path(task, state: "doing"), method: :put %>
+ 	 <% end %>
+
+ 	 <%= link_to "<i class='fa fa-arrow-right'></i>".html_safe, change_task_path(task, state: "done"), method: :put %>
+
+ <% end -%>
+
+	</div>
+</div>
